--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 }
 
 body {
-    margin: 0; 
+    margin: 0;
+   
+     
 }
 
 .logo {
@@ -70,3 +72,83 @@ nav a:hover {
 }
 
 /* style for hero section */
+.visionandmission {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.sec1 , .sec2 , .sec3{
+    display: flex;
+    border: 3px solid blue;
+    border-radius: 50px;
+    padding: 30px;
+    margin: 30px 60px 20px 60px;
+    
+}
+
+.img1 {
+    border-top-left-radius: 20px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 200px;
+    padding-left: 20px;
+    width: 40%;
+}
+.para1{
+    width: 45%;
+    position: absolute;
+    left: 45%;
+    top: 30%;
+    font-size: 40px;
+    font-weight: 300;
+    font-style:oblique;
+}
+.para2{
+    width: 800px;
+    padding-right: 30px;
+    font-size: 30px;
+    font-weight: 300;
+    font-style:oblique;
+    margin-top: 30px;
+    
+}
+.img2{
+    margin-left: 100px;
+    border-top-right-radius: 30px;
+    border-bottom-right-radius: 180px;
+    border-top-left-radius: 180px;
+    width: 40%;
+    height:350px;
+}
+.para3{
+    width: 70%;
+    margin-left: 80px;
+    margin-top: 200px;
+    font-size: 35px;
+    font-weight: 300;
+    font-style:oblique;
+    margin-top: 10px;
+    
+}
+
+.img3{
+    border-top-left-radius: 300px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 500px;
+    width: 40%;
+    height: 400px;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 40px;
+    width: 100%;
+    height: 300px;
+    font-weight: 500;
+    background-color: #6cadee;
+}
+
